# FF-LocalKnowledgeBase

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
docs/: ADAPTERS.md  ARCHITECTURE.md  INSTALLATION.md  KNOWLEDGE_SCHEMA.md  SKILLS.md
examples/: answers.json
examples/synthetic-workspace/: AGENTS.md
examples/synthetic-workspace/backend/: pyproject.toml
examples/synthetic-workspace/backend/src/synthetic_backend/: __init__.py
examples/synthetic-workspace/frontend/: package.json
profiles/dotnet/: profile.json
profiles/generic/: profile.json
profiles/node/: profile.json
profiles/python/: profile.json
skills/ff-bootstrap/: SKILL.md
skills/ff-bootstrap/agents/: openai.yaml
skills/ff-develop/: SKILL.md
skills/ff-develop/agents/: openai.yaml
skills/ff-kb-bridge/: SKILL.md
skills/ff-kb-bridge/agents/: openai.yaml
skills/ff-knowledge/: SKILL.md
skills/ff-knowledge/agents/: openai.yaml
skills/ff-learn/: SKILL.md
skills/ff-learn/agents/: openai.yaml
skills/ff-learn/references/: ingest.md
skills/ff-plan/: SKILL.md
skills/ff-plan/agents/: openai.yaml
skills/ff-plan/references/: artifacts.md
skills/ff-review/: SKILL.md
skills/ff-review/agents/: openai.yaml
skills/ff-verify/: SKILL.md
skills/ff-verify/agents/: openai.yaml
src/ff_local_knowledge/: __init__.py  __main__.py  cli.py  detection.py  filesystem.py  knowledge.py  planning.py  resources.py  scanning.py  transaction.py
templates/adapters/claude/: CLAUDE.md.tmpl
templates/adapters/codex/: AGENTS.md.tmpl
templates/adapters/generic/: AGENTS.md.tmpl
templates/knowledge/: INDEX.md  knowledge.json  router.json
templates/knowledge/graph/: edges.jsonl  nodes.jsonl
templates/knowledge/pages/projects/: project-overview.md
templates/knowledge/pages/standards/: coding-standards.md
templates/locales/zh-CN/: INDEX.md
templates/locales/zh-CN/pages/projects/: project-overview.md
templates/locales/zh-CN/pages/standards/: coding-standards.md
tests/: test_detection.py  test_installation.py  test_knowledge.py  test_resources.py  test_scanning.py  test_skills.py
tests/fixtures/synthetic-python/: pyproject.toml
tests/fixtures/synthetic-python/src/: example.py
